# Rocket

./: Cargo.toml
contrib/db_pools/lib/src/: lib.rs
core/lib/src/: rocket.rs
core/lib/src/data/: mod.rs  parquet_handler.rs
core/lib/src/query/: mod.rs  sql_handler.rs
examples/json_sql_example/: Cargo.toml
examples/json_sql_example/migrations/00000000000000_create_items/: up.sql
examples/json_sql_example/src/: main.rs  schema.rs
examples/json_to_parquet/: Cargo.toml
examples/json_to_parquet/src/: main.rs
site/news/: 2023-11-17-version-0.5.md
