[workspace]
resolver = "2"

[dependencies]
parquet = "2.0"
arrow = "5.0"
datafusion = "5.0"
members = [
  "core/lib/",
  "core/codegen/",
  "core/http/",
  "contrib/db_pools/codegen/",
  "contrib/db_pools/lib/",
  "contrib/sync_db_pools/codegen/",
  "contrib/sync_db_pools/lib/",
  "contrib/dyn_templates/",
  "contrib/ws/",
  "site/tests",
]
